fix: the spacing of right throught

--- a/src/scss/templates/_thoughts.scss
+++ b/src/scss/templates/_thoughts.scss
@@ -58,7 +58,7 @@
 			.throught {
 				@apply sticky;
 
-				top: 140px;
+				top: 120px;
 
 				.entry-header {
 					.wp-post-image,
